# deepkernels

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.public  Dockerfile.research  LICENSE  README.md  docker-compose.yml  main.py  model_dkl_0.py  predict.py  pyproject.toml  test_cleaner.py
.github/workflows/: ci.yml  deploy.yml
app/: app.py  pyproject.toml
app/api/routers/: metrics.py
app/core/: database.py
app/services/: telemetry.py
deepkernels/: .dockerignore  .gitignore  Dockerfile  config.yaml  pyproject.toml  requirements.txt
deepkernels/src/deepkernels/infer/: audit.py
deepkernels/src/deepkernels/kernels/: dynamic_spectral.py  efficient_dynamic_spectral.py
deepkernels/src/deepkernels/losses/: inverse_wishart.py  kl_divergence.py
deepkernels/src/deepkernels/models/: beta_vae.py  dirichlet.py  dirichlet_variational.py  hypernetwork.py  import_skel.py  linear_decoder.py  sparsegp.py  transformer.py
deepkernels/src/deepkernels/preprocess/: inducing.py
deepkernels/src/deepkernels/utils/: init_inducing.py  lipschitz_lock.py
deepkernels/unused/: train_old.py
deepkernelsroot/: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  app.py  config.yaml  docker-compose.yml  kernel_algebra_dna.txt  mlflow.db  pyproject.toml  requirements.txt
deepkernelsroot/.github/workflows/: deploy.yml
deepkernelsroot/app/: app.py  pyproject.toml
deepkernelsroot/app/api/routers/: metrics.py
deepkernelsroot/app/core/: database.py
deepkernelsroot/app/services/: telemetry.py
deepkernelsroot/frontend/: dashboard.py  pyproject.toml
deepkernelsroot/public/static/: script.js  style.css
deepkernelsroot/src/deepkernels/: main.py
deepkernelsroot/src/deepkernels/infer/: generate.py  pred.py
deepkernelsroot/src/deepkernels/kernels/: DeepLinearKernel.py  NTK.py  deepkernel.py  expertkernel.py  jit-draft.py  keops.py  linear.py  linear_rff.py  lmckernel.py  low_rank_spectral.py  master.py
deepkernelsroot/src/deepkernels/losses/: global_kl.py  kl.py  kl_divergence.py  simple.py
deepkernelsroot/src/deepkernels/models/: NKN.py  beta_vae.py  decoder.py  deepkernels.py  dirichlet.py  encoder.py  exactgp.py  gaussianprocess.py  harmonic_decoder.py  hdpgp.py  linear_decoder.py  lmc.py  master.py  model.py  model_old.py  nystrom_decoder.py  orchestrate.py  parent.py  resnet.py  simplegp.py  snvgp_layer.py  sparsegp.py  spectral_VAE.py  transformer.py  variationalautoencoder.py
deepkernelsroot/src/deepkernels/preprocess/: cleaner.py  harmoniser.py  inducing.py  lasso.py  novelty.py  pipe.py  preprocess.py  ts.py
deepkernelsroot/src/deepkernels/train/: cyclical_annealer.py  exact_objective.py  keras.py  langevin_trainer.py  objective.py  stochastic_annealer.py  train.py  train_adam.py  train_multitask.py  trainer.py  variational_objective.py
deepkernelsroot/src/deepkernels/utils/: dirichlet_pruner.py
deepkernelsroot/templates/: dashboard.html
deepkernelsroot/tests/: NKN_test.py  amortised_dirichlet_test.py  decoder_test.py  encoder_test.py  generative_kernel_test.py  modular_integration_test.py  test.py  test_data_pipe.py  test_final_train.py  test_main.py  vae_test.py
deepkernelsroot/unused/: MS_train.py  dirichlet_old.py  model_dkl_0.py  predict.py  project.py  rkhs_decoder.py
deepkernelsroot/unused/public/: dashboard.js  index.html  script.js
frontend/: dashboard.py
root/: config.yaml  pyproject.toml
src/: cleaner.py  integrate.py  lasso.py  model.py  novelty.py  orchestrate.py  train.py
src/deepkernels/models/: dummy_dirichlet.py  dummy_gp.py  dummy_model_config.py  lite_dirichlet.py  lite_gp.py  lite_model.py  lite_parent.py  main.py  model.py  parent.py
src/infer/: pred.py
src/kernels/: weighted_rff_kernel.py
src/losses/: inverse_wishart.py
src/models/: dirichlet_variational.py  hdpgp.py  hypernetwork.py  import_skel.py  lmc.py  model.py  model_config.py  resnet.py  snvgp_layer.py
src/models/unused/: dirichlet.py  dirichlet_old.py
src/optimisers/: hmc_optimiser.py
src/preprocess/: cleaner.py  harmoniser.py  inducing.py  novelty.py  pipe.py  preprocess.py
src/train/: train_multitask.py
