[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepkernels-playground"
version = "1.0.0"
description = "deepkernels -- A generative kernel machine for scalable simulation-based inference (public-access-version)"
requires-python = ">=3.10"
dependencies = [
    # Core Data & Math
    "pandas==2.3.3",
    "numpy==2.2.6",
    "pydantic==2.12.5",
    "scipy==1.15.3",
    "scikit-learn==1.7.2",
    "torch==2.5.1",
    "gpytorch==1.11",
    "linear-operator==0.5.0",
    "pykeops==2.2.3",
    "ninja==1.11.1",
    "tqdm==4.67.3",
    "pyyaml==6.0.3"
]
[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "jupyterlab==4.1.0",
    "black==24.1.1",
    "isort==5.13.2",
    "safety==3.0.1"
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["deepkernels*"]