[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepkernels"
version = "1.0.1"
description = "deepkernels -- A generative kernel machine for scalable simulation-based inference"
requires-python = ">=3.10"

# EVERY library required for the Vultr container to boot and serve traffic MUST be here.
dependencies = [
    # Core Data & Math
    "pandas==2.3.3",
    "numpy==2.2.6",
    "pydantic==2.12.5",
    "scipy==1.15.3",
    "scikit-learn==1.7.2",
    "joblib==1.3.2",
    
    #-Core probabilistic learning deps-#
    "gpytorch==1.11",
    "linear-operator==0.5.0",
    "pykeops==2.2.3",
    "ninja==1.11.1",
    
    # MLOps & Telemetry
    "mlflow==3.10.1",
    "sqlalchemy==2.0.48",
    "pyyaml==6.0.3",
    "tqdm==4.67.3",
    "aiosqlite==0.22.1",
    
    #-API & Frontend-#
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0.post1",
    "python-multipart==0.0.6",
    "python-dotenv==1.2.2",
    "plotly==5.18.0",
    "httpx==0.27.0",
    "dash==4.1.0"
]

[project.optional-dependencies]
# This should ONLY contain tools you use on your laptop to write/test code.
dev = [
    "pytest==8.0.0",
    "jupyterlab==4.1.0",
    "black==24.1.1",
    "isort==5.13.2",
    "safety==3.0.1"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["deepkernels*"]