[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepkernels-backend"
version = "1.1.0"
description = "FastAPI inference engine for DeepKernels."
requires-python = ">=3.10"

dependencies = [
    # Core Data Processing (From your app.py imports)
    "numpy==2.2.6",
    "pandas==2.3.3",
    "scipy==1.15.3",
    "joblib==1.3.2",
    "scikit-learn==1.7.2",
    
    #-Core probabilistic learning deps-#
    "gpytorch==1.11",
    "linear-operator==0.5.0",
    "pykeops==2.2.3",
    "ninja==1.11.1",
    
    #-API Server-#
    "fastapi==0.104.1",
    "pydantic==2.12.5",
    "uvicorn[standard]==0.24.0.post1",
    "gunicorn==25.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "black==24.3.0",
    "isort==5.13.2"
]