[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepkernels-backend"
version = "1.1.0"
description = "FastAPI inference engine for DeepKernels."
requires-python = ">=3.10"

dependencies = [
    # --- Relaxed Data Stack (Prevents version clashing) ---
    "pandas~=2.2.0",
    "numpy>=1.26.0,<3.0.0",
    "scipy>=1.11.0",
    "scikit-learn~=1.5.0",
    "joblib>=1.3.0",
    
    # --- Math & Probabilistic (Strategic pinning) ---
    "gpytorch~=1.11.0",
    "linear-operator~=0.5.0",
    "pykeops~=2.2.0",
    "ninja",
    
    # --- API & Server (Relaxed for security/compatibility) ---
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "gunicorn>=21.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "black==24.3.0",
    "isort==5.13.2"
]