[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepkernels-frontend"
version = "1.0.1"
description = "Lightweight Container for deepkernels GUI"
requires-python = ">=3.10"

dependencies = [
    "dash==2.16.1",
    "plotly==5.20.0",
    "numpy==2.2.6",
    "httpx==0.27.0",
    "gunicorn==21.2.0"
]

[project.optional-dependencies]
dev = [
    "black==24.3.0",
    "isort==5.13.2"
]